more alt text, fpga start

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
         "FPGA",
         "Gallager",
         "LDPC",
-        "NAND"
+        "NAND",
+        "precomputed",
+        "reprogrammable",
+        "submatrices"
     ]
 }
