split basics into fpga and ldpc, QC ldpc start

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
         "Gallager",
         "LDPC",
         "NAND",
+        "circulant",
         "precomputed",
+        "quasicyclic",
         "reprogrammable",
         "submatrices"
     ]
