--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "NAND",
         "circulant",
         "memoryless",
+        "performant",
         "precomputed",
         "quasicyclic",
         "reprogrammable",
