more implementations specifics

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "VHDL",
         "Xilinx",
         "circulant",
+        "combinatorial",
         "memoryless",
         "numpy",
         "performant",
