more text and pictures

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,12 +8,14 @@
         "LLRs",
         "NAND",
         "VHDL",
+        "Vivado",
         "Xilinx",
         "circulant",
         "combinatorial",
         "memoryless",
         "numpy",
         "performant",
+        "precomputations",
         "precomputed",
         "quasicyclic",
         "reprogrammable",
